grammar/test/corpus/basic.txt
================================================================================
Feature with description and a scenario
================================================================================

Feature: Guess the word
  The word guess game is a turn-based game for two players.

  Scenario: Maker starts a game
    Given the Maker has started a game
    When the Maker starts a game
    Then the Maker waits for a Breaker to join

--------------------------------------------------------------------------------

(source_file
  (feature
    name: (name_line)
    (description
      (description_line))
    (scenario
      name: (name_line)
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment)))
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment)))
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment))))))

================================================================================
Tags on feature and scenario
================================================================================

@wip @smoke
Feature: Tagged feature

  @fast
  Scenario: A tagged scenario
    Given something

--------------------------------------------------------------------------------

(source_file
  (tag_list
    (tag)
    (tag))
  (feature
    name: (name_line)
    (scenario
      (tag_list
        (tag))
      name: (name_line)
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment))))))

================================================================================
Comments are ignored as extras
================================================================================

# top level comment
Feature: Has comments
  # a comment inside the feature

  Scenario: One
    # comment before step
    Given a thing

--------------------------------------------------------------------------------

(source_file
  (comment)
  (feature
    name: (name_line)
    (comment)
    (scenario
      name: (name_line)
      (comment)
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment))))))

================================================================================
Background block
================================================================================

Feature: With background

  Background: Common setup
    Given a logged in user

  Scenario: Uses background
    When they visit the dashboard

--------------------------------------------------------------------------------

(source_file
  (feature
    name: (name_line)
    (background
      name: (name_line)
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment))))
    (scenario
      name: (name_line)
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment))))))

================================================================================
Rule block containing scenarios
================================================================================

Feature: Refunds

  Rule: A refunded item should be returned to stock

    Scenario: Refunded items should be returned to stock
      Given a customer buys a shoe
      When they return the shoe
      Then the shoe should be returned to stock

  Rule: Out of stock items should not be sold

    Scenario: Out of stock item is not sellable
      Given an item is out of stock
      Then it should not be sellable

--------------------------------------------------------------------------------

(source_file
  (feature
    name: (name_line)
    (rule_header
      name: (name_line))
    (scenario
      name: (name_line)
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment)))
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment)))
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment))))
    (rule_header
      name: (name_line))
    (scenario
      name: (name_line)
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment)))
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment))))))

================================================================================
Scenario Outline with Examples table
================================================================================

Feature: Eating

  Scenario Outline: Eating cucumbers
    Given there are <start> cucumbers
    When I eat <eat> cucumbers
    Then I should have <left> cucumbers

    Examples:
      | start | eat | left |
      |    12 |   5 |    7 |
      |    20 |   5 |   15 |

--------------------------------------------------------------------------------

(source_file
  (feature
    name: (name_line)
    (scenario
      name: (name_line)
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment)
          (parameter)
          (text_fragment)))
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment)
          (parameter)
          (text_fragment)))
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment)
          (parameter)
          (text_fragment)))
      (examples
        (data_table
          (table_row
            (table_cell)
            (table_cell)
            (table_cell))
          (table_row
            (table_cell)
            (table_cell)
            (table_cell))
          (table_row
            (table_cell)
            (table_cell)
            (table_cell)))))))

================================================================================
Step with a data table argument
================================================================================

Feature: Users

  Scenario: Creating users
    Given the following users exist:
      | name  | email           |
      | Alice | alice@test.com  |
      | Bob   | bob@test.com    |

--------------------------------------------------------------------------------

(source_file
  (feature
    name: (name_line)
    (scenario
      name: (name_line)
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment))
        (data_table
          (table_row
            (table_cell)
            (table_cell))
          (table_row
            (table_cell)
            (table_cell))
          (table_row
            (table_cell)
            (table_cell)))))))

================================================================================
Step with a doc string argument
================================================================================

Feature: Blog posts

  Scenario: Publishing a post
    Given a post with body:
      """
      This is the body
      of the post.
      """

--------------------------------------------------------------------------------

(source_file
  (feature
    name: (name_line)
    (scenario
      name: (name_line)
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment))
        (doc_string)))))

================================================================================
All step keyword alternatives
================================================================================

Feature: Placing an order
  Scenario: Checkout with multiple conditions
    Given a cart with items
    And a valid payment method
    When the customer checks out
    But the address is missing
    Then the order should be rejected
    * a retry prompt should be shown

--------------------------------------------------------------------------------

(source_file
  (feature
    name: (name_line)
    (scenario
      name: (name_line)
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment)))
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment)))
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment)))
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment)))
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment)))
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment))))))

================================================================================
Step text with quoted string parameters
================================================================================

Feature: Test case management

  Scenario: Adding a test case to a plan
    Given John Smith adds a test case named "Login Flow" to the test plan named "Regression Plan"

--------------------------------------------------------------------------------

(source_file
  (feature
    name: (name_line)
    (scenario
      name: (name_line)
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment)
          (quoted_string)
          (text_fragment)
          (quoted_string))))))

================================================================================
Feature description with a user-story narrative
================================================================================

Feature: Updating a Test Plan
  As a user enrolled in a project
  I want to update an existing test plan
  So that I can keep test plans accurate and up to date

  Scenario: Renaming a test plan
    Given a test plan exists

--------------------------------------------------------------------------------

(source_file
  (feature
    name: (name_line)
    (description
      (narrative_line)
      (narrative_line)
      (narrative_line))
    (scenario
      name: (name_line)
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment))))))

================================================================================
Scenario with description text before its steps
================================================================================

Feature: Test execution

  Scenario: AC.1 - An enrolled user cancels a running test execution

    A user enrolled in the project can cancel a test execution while it is
    still running.

    Given the test execution for the test plan named "Regression Plan" has the status "Running"
    When John Smith cancels the test execution for the test plan named "Regression Plan"
    Then the test execution status should be "Cancelled" on the test executions page for the test plan named "Regression Plan"

--------------------------------------------------------------------------------

(source_file
  (feature
    name: (name_line)
    (scenario
      name: (name_line)
      (description
        (description_line)
        (description_line))
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment)
          (quoted_string)
          (text_fragment)
          (quoted_string)))
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment)
          (quoted_string)))
      (step
        keyword: (step_keyword)
        text: (step_text
          (text_fragment)
          (quoted_string)
          (text_fragment)
          (quoted_string))))))
